# AI_solo_coder_task_B_118

./: .dockerignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.simulator  README.md  docker-compose.yml
backend/: Cargo.toml
backend/src/: alarm_mqtt.rs  api.rs  config.rs  control_optimizer.rs  fuel.rs  fuel_comparator.rs  interactive.rs  lib.rs  main.rs  metrics.rs  modbus_receiver.rs  models.rs  mqtt.rs  parameter_id.rs  production_scheduler.rs  qlearning.rs  rl_control.rs  scheduler.rs  slag.rs  slag_analyzer.rs  storage.rs  thermodynamics.rs  thermodynamics_simulator.rs  virtual_smelting.rs
clickhouse/: config.xml  init.sql
frontend/: index.html  nginx.conf
frontend/css/: style.css
frontend/js/: app.js  bellows.js  client.js  control_panel.js  fuel_comparison.js  furnace3d.js  interactive_experience.js  production_scheduler.js  slag_analysis.js  tempChart.js  tempField.js
frontend/js/components/: FuelComparator.js  ProductionScheduler.js  SlagAnalyzer.js  VirtualSmelting.js
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: datasources.yml
mosquitto/: mosquitto.conf
prometheus/: prometheus.yml
simulator/: bellows_simulator.py
