[package]
name = "metallurgy-simulation"
version = "0.1.0"
edition = "2021"
description = "古代风箱鼓风冶铁过程热力学模拟与炉温控制仿真系统"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"
rand_distr = "0.4"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-log = "0.2"
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", features = ["http-listener"] }
anyhow = "1.0"
thiserror = "1.0"
clickhouse = { version = "0.12", features = ["time"] }
clickhouse-rs-cityhash-sys = "0.1"
rumqttc = { version = "0.23" }
reqwest = { version = "0.11", features = ["json", "stream"] }
parking_lot = "0.12"
dashmap = "5.5"
bytes = "1.5"
futures-util = "0.3"
ndarray = "0.15"
num-traits = "0.2"
statrs = "0.16"
approx = "0.5"
clap = { version = "4.4", features = ["derive", "env"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
